--- a/problem-set-4.html
+++ b/problem-set-4.html
@@ -130,7 +130,7 @@
     </div>
 
     <div class="exercise" id="exercise8">
-      <button>Ounces</button>
+      <button onclick="ounces();">Ounces</button>
 
       <h3>OUTPUT</h3>
       <div class="output" id="output8">
