--- a/problem-set-4.html
+++ b/problem-set-4.html
@@ -146,7 +146,7 @@
     </div>
 
     <div class="exercise" id="exercise9">
-      <button>Money</button>
+      <button onclick="pennies();">Money</button>
 
       <h3>OUTPUT</h3>
       <div class="output" id="output9">
